# ContextMesh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  benchmark.py  ollama_eval.py  ollama_large_eval.py  plan.md  pyproject.toml  run_phase2_benchmark.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: harness.py  market_comparison_2026-05-16.md  multi_turn_delta.py
benchmarks/results/: 2026-05-02.json  2026-05-16-v03.json  2026-05-24.json
contextmesh/: __init__.py  config.py
contextmesh/adapters/: __init__.py  aider.py  base.py  claude_code.py  codex_cli.py
contextmesh/agent/: tools.py
contextmesh/cli/: main.py
contextmesh/indexer/: fingerprint.py  repo_indexer.py  tree_sitter_parser.py
contextmesh/packets/: compressor.py  focus.py  generator.py  markdown.py  schema.py
contextmesh/runtime/: budget.py  context_audit.py  context_candidates.py  context_schema.py  dashboard.py  inspector.py  langfuse_export.py  ledger.py  metrics.py  otel_export.py  pricing.py  team_export.py
contextmesh/storage/: db.py
contextmesh/wrappers/: shell_runner.py  test_runner.py
demo/: run_demo.sh
docs/: architecture.md  context_intelligence_v1.md  cost_metrics.md  langfuse_comment_draft.md  launch_post.md  market_study_contextmesh_2026.md  metrics.md  packets.md  real_life_agent_scenarios.md
docs/integrations/: claude_code.md  codex_cli.md  cursor.md
docs/marketing/: hacker_news.md  reddit_localllama.md  x_thread.md
examples/enterprise_agentic/: README.md  run_enterprise_demo.sh  (+1 more)
tests/: conftest.py  test_adapter_aider.py  test_adapter_claude_code.py  test_adapter_codex_cli.py  test_benchmark_harness.py  test_budget.py  test_cli.py  test_compressor.py  test_context_audit.py  test_context_candidates.py  test_context_intelligence_v1.py  test_context_schema.py  test_dashboard.py  test_enterprise_agentic_example.py  test_enterprise_rag_office_example.py  test_focus.py  test_indexer.py  test_inspector.py  test_langfuse_export.py  test_ledger.py  test_metrics.py  test_otel_export.py  test_packets.py  test_repo_indexer.py  test_storage_db.py  test_team_export.py  test_tools.py  test_version.py  test_wrappers.py
(+20 files in other folders)
